[package]
name = "hdn_node"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "2.1.0"
chrono = { version = "0.4.1", features = ["serde", "rustc-serialize"] }
